--- a/tugas_satu_deepSeek.html
+++ b/tugas_satu_deepSeek.html
@@ -36,9 +36,10 @@
         }
         .biodata {
             display: grid;
-            grid-template-columns: repeat(2,1fr);
-            gap: 15px;
+            grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
+            gap: 50px;
             margin-bottom: 20px;
+            margin-block: 30px;
         }
         .box {
             border: 1px solid #333;
@@ -47,8 +48,8 @@
         }
         .portofolio {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 15px;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 100px;
         }
         .portofolio-item {
             border: 1px solid #ddd;
